@@ -13,7 +13,7 @@ BEGIN {
     if($] < 5.008) {
         plan skip_all => "utf-8 tests with perl >= 5.8 only";
     } else {
-        plan tests => 3;
+        plan tests => 4;
     }
 }
 
@@ -83,4 +83,27 @@ $data = join '', <FILE>;
 close FILE;
 like($data, qr/\x{30B8}/, "easy: utf8-1");
 
+###########
+# Easy mode with utf8 setting
+###########
 
+open STDERR, ">$TMP_FILE";
+select STDERR; $| = 1; #needed on win32
+select STDOUT;
+open IN, "<$TMP_FILE" or die "Cannot open $TMP_FILE"; binmode IN, ":utf8";
+sub readstderr { return join("", <IN>); }
+
+END   { unlink $TMP_FILE;
+        close IN;
+      }
+
+Log::Log4perl->easy_init({
+    level => $DEBUG,
+    file  => "STDERR",
+    utf8  => 1,
+});
+
+use utf8;
+DEBUG "Über";
+binmode STDOUT, ":utf8"; # for better error messages of the test suite
+like(readstderr(), qr/Über/, 'utf8 matches');
